--- a/final_project/src/main/resources/application.properties
+++ b/final_project/src/main/resources/application.properties
@@ -40,6 +40,18 @@ spring.mvc.locale-resolver=fixed
 #spring.mvc.locale-resolver=accept-header
 
 
+#Spring gmail props
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=finalspringproject@gmail.com
+spring.mail.password=final1234
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
