--- a/final_project/pom.xml
+++ b/final_project/pom.xml
@@ -24,13 +24,17 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
+
 	<dependencies>
-		<!-- <dependency>
-			<groupId>io.github.jpenren</groupId>
-			<artifactId>thymeleaf-spring-data-dialect</artifactId>
-			<version>3.3.1</version>
+		<!-- <dependency> <groupId>io.github.jpenren</groupId> <artifactId>thymeleaf-spring-data-dialect</artifactId> 
+			<version>3.3.1</version> </dependency> -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 		</dependency>
-		 -->
+
 		<dependency>
 			<groupId>io.github.jpenren</groupId>
 			<artifactId>thymeleaf-spring-data-dialect</artifactId>
@@ -40,6 +44,11 @@
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
